Add DMA, DMA_STM32, UART_STM32 in project config

--- a/prj.conf
+++ b/prj.conf
@@ -5,4 +5,7 @@ CONFIG_LIBCSP_HAVE_STDIO=y
 
 CONFIG_PICOLIBC=y # missing <endian.h> for libcsp
 
+CONFIG_DMA=y
+CONFIG_DMA_STM32=y
+CONFIG_UART_STM32=y
 CONFIG_UART_ASYNC_API=y
