Add sampling and printing CPU temperature sensor

--- a/prj.conf
+++ b/prj.conf
@@ -9,3 +9,7 @@ CONFIG_DMA=y
 CONFIG_DMA_STM32=y
 CONFIG_UART_STM32=y
 CONFIG_UART_ASYNC_API=y
+
+CONFIG_ADC=y
+CONFIG_SENSOR=y
+CONFIG_CBPRINTF_FP_SUPPORT=y
