--- a/prj.conf
+++ b/prj.conf
@@ -13,3 +13,13 @@ CONFIG_UART_ASYNC_API=y
 CONFIG_ADC=y
 CONFIG_SENSOR=y
 CONFIG_CBPRINTF_FP_SUPPORT=y
+
+CONFIG_I2C=y
+CONFIG_I2C_STM32=y
+CONFIG_I2C_DUMP_MESSAGES=y
+CONFIG_I2C_TARGET=y
+CONFIG_I2C_LOG_LEVEL_DBG=y
+
+CONFIG_LOG=y
+CONFIG_LOG_MODE_DEFERRED=y
+CONFIG_LOG_PRINTK=y
