Add CONFIG_DEBUG=y (I2C not stable if not DEBUG)

--- a/prj.conf
+++ b/prj.conf
@@ -23,3 +23,6 @@ CONFIG_I2C_LOG_LEVEL_DBG=y
 CONFIG_LOG=y
 CONFIG_LOG_MODE_DEFERRED=y
 CONFIG_LOG_PRINTK=y
+
+# I2C not stable in non-DEBUG
+CONFIG_DEBUG=y
