Add new LEDs basic setup

--- a/prj.conf
+++ b/prj.conf
@@ -18,7 +18,7 @@ CONFIG_I2C=y
 CONFIG_I2C_STM32=y
 CONFIG_I2C_STM32_INTERRUPT=y
 CONFIG_I2C_TARGET=y
-CONFIG_I2C_LOG_LEVEL_DBG=y
+# CONFIG_I2C_LOG_LEVEL_DBG=y
 
 CONFIG_LOG=y
 CONFIG_LOG_MODE_DEFERRED=y
